--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -37,6 +37,12 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Get build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: dist-files
+      - name: Output contents
+        run: ls
       - name: Deploy
         run: echo "Deploying..."
-        #dfdfdfd
+        
